fix ui bug on mobile

--- a/static/styles/css/styles.css
+++ b/static/styles/css/styles.css
@@ -114,10 +114,12 @@ body {
 
 .translation-container {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     gap: 10px;
     margin-top: 10px;
 }
+
 
 /* Form elements */
 input[type="text"] {
